# student-information-system

./: .env.example  .gitignore  CLAUDE.md  DEMO_CREDENTIALS.md  README.md  TESTING_REGISTRATION.md  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
.claude/agents/: academic-affairs-expert.md  accessibility-expert.md  accreditation-expert.md  admissions-expert.md  bursar-expert.md  data-architect.md  ferpa-compliance-expert.md  financial-aid-expert.md  higher-ed-pm.md  integration-architect.md  international-student-expert.md  irs-1098t-expert.md  registrar-expert.md  salesforce-edu-cloud-architect.md  security-architect.md  student-success-expert.md
.extracted/essential-functions/: [Content_Types].xml
.extracted/essential-functions/customXml/: item1.xml  item3.xml  itemProps1.xml  itemProps2.xml  itemProps3.xml
.extracted/essential-functions/docProps/: core.xml  custom.xml
.extracted/essential-functions/xl/: sharedStrings.xml  styles.xml  workbook.xml
.extracted/essential-functions/xl/worksheets/: sheet1.xml
.extracted/sis-processes/: [Content_Types].xml
.extracted/sis-processes/customXml/: itemProps1.xml  itemProps2.xml  itemProps3.xml
.extracted/sis-processes/docProps/: core.xml
.extracted/sis-processes/xl/: metadata  sharedStrings.xml  styles.xml  workbook.xml
.extracted/sis-processes/xl/_rels/: workbook.xml.rels
.extracted/sis-processes/xl/worksheets/: sheet1.xml  sheet2.xml
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: StudentCourseRegistrationModal.tsx
apps/web/src/hooks/: useDebounce.ts
apps/web/src/lib/: rate-limit.ts
apps/worker/: package.json  tsconfig.json
apps/worker/src/: config.ts  index.ts  logger.ts  scheduler.ts
docker/: docker-compose.yml  init-db.sql
scripts/: dev-setup.sh
services/scheduler/: .env.example  Dockerfile  README.md  pyproject.toml
services/scheduler/src/scheduler/: __init__.py  config.py
services/scheduler/src/scheduler/api/: __init__.py  app.py  routes.py
services/scheduler/src/scheduler/constraints/: __init__.py  hard.py  soft.py
services/scheduler/src/scheduler/db/: __init__.py  connection.py  repository.py
services/scheduler/src/scheduler/models/: __init__.py  domain.py
services/scheduler/src/scheduler/solvers/: __init__.py  cpsat.py
services/scheduler/tests/: __init__.py  test_api.py  test_solver.py
(+60 files in other folders)
